vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Set the corresponding property value for the device specified by <code>device</code>.
* @param[in]	device			The handle of the device from which to set the property value. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	propertyType	The type of property to set on the device.
* @param[in]	pData			Pointer to a buffer containing the property value.
* @param[in]	dataSize		The size, in bytes, of the property value contained in <code>pData</code>.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetProperty(PsDeviceHandle device, uint32_t sessionIndex, int32_t propertyType, const void* pData, int32_t dataSize);
/**
* @brief 		Returns the internal intrinsic and distortion coefficient parameters from the device specified by <code>device</code>.
* @param[in] 	device				The handle of the device from which to get the internal parameters. 
* @param[in] 	sessionIndex		The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	sensorType			The type of sensor (depth or RGB) from which to get parameter information. Pass in the applicable value defined by ::PsSensorType.
* @param[out] 	pCameraParameters	Pointer to a PsCameraParameters variable in which to store the parameter values.
* @return 		::PsRetOK			if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetCameraParameters(PsDeviceHandle device, uint32_t sessionIndex, PsSensorType sensorType, PsCameraParameters* pCameraParameters);
/**
* @brief 		Returns the camera rotation and translation coefficient parameters from the device specified by <code>device</code>.
* @param[in] 	device						The handle of the device from which to get the extrinsic parameters. 
* @param[in] 	sessionIndex				The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	pCameraExtrinsicParameters 	Pointer to a ::PsGetCameraExtrinsicParameters variable in which to store the parameters.
* @return 		::PsRetOK					if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetCameraExtrinsicParameters(PsDeviceHandle device, uint32_t sessionIndex, PsCameraExtrinsicParameters* pCameraExtrinsicParameters);
/**
* @brief 		Sets the color image pixel format on the device specified by <code>device</code>. Currently only RGB and BGR formats are supported.
* @param[in] 	device			The handle of the device to set the pixel format. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	pixelFormat		The color pixel format to use. Pass in one of the values defined by ::PsPixelFormat. Currently only <code>PsPixelFormatRGB888</code> and <code>PsPixelFormatBGR888</code> are supported.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetColorPixelFormat(PsDeviceHandle device, uint32_t sessionIndex, PsPixelFormat pixelFormat);
/**
* @brief 		Sets the RGB frame Resolution.
* @param[in]	device			The handle of the device on which to set the GMM gain.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	resolution		The resolution value to set. See ::PsResolution for more information.
* @return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBResolution(PsDeviceHandle device, uint32_t sessionIndex, PsResolution resolution);
/**
* @brief 		Returns the the RGB frame Resolution.
* @param[in]	device			The handle of the device from which to get the GMM gain.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	resolution 		Pointer to a variable in which to store the returned resolution.
* @return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBResolution(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* resolution);
/**
* @brief 		Sets the WDR output mode.
* @param[in]	device			The handle of the device on which to set the mode.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	pWDRMode 		The WDR output mode to set. See ::PsWDROutputMode for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetWDROutputMode(PsDeviceHandle device, uint32_t sessionIndex, PsWDROutputMode* pWDRMode);
/**
* @brief		Gets the current WDR output mode.
* @param[in]	device			The handle of the device on which to get the mode from.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	pWDRMode 		A pointer to a ::PsWDROutputMode variable in which to store the current WDR output mode.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetWDROutputMode(PsDeviceHandle device, uint32_t sessionIndex, PsWDROutputMode* pWDRMode);
/**
* @brief 		Sets the WDR style on the device.
* @param[in] 	device			The handle of the device on which to set the WDR style.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	wdrStyle 		The wide dynamic range merge style to use. See ::PsWDRStyle for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetWDRStyle(PsDeviceHandle device, uint32_t sessionIndex, PsWDRStyle wdrStyle);
/**
* @brief 		Gets the MeasuringRange in depthRange.
* @param[in] 	device			The handle of the device on which to set the WDR style.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	depthRange	 	Specifies the depth range mode.
* @param[out]	pMeasuringRange A pointer to a ::PsMeasuringRange variable in which to store the MeasuringRange in depthRange.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetMeasuringRange(PsDeviceHandle device, uint32_t sessionIndex, PsDepthRange depthRange, PsMeasuringRange* pMeasuringRange);
/**
* @brief 		Converts the input points from world coordinate space to depth coordinate space.
* @param[in]	device			The handle of the device on which to perform the operation.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	pWorldVector 	Pointer to a buffer containing the x, y, and z values of the input world coordinates to be converted, measured in millimeters.
* @param[out]	pDepthVector 	Pointer to a buffer in which to output the converted x, y, and z values of the depth coordinates. \n
*								x and y are measured in pixels, where 0, 0 is located at the top left corner of the image. \n
*								z is measured in millimeters, based on the ::PsPixelFormat depth frame.
* @param[in]	pointCount 		The number of coordinates to convert.
* @param[in]	pCameraParam	The intrinsic camera parameters for the depth camera. See ::PsGetCameraParameters.
* @return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_ConvertWorldToDepth(PsDeviceHandle device, uint32_t sessionIndex, PsVector3f* pWorldVector, PsDepthVector3* pDepthVector, int32_t pointCount, PsCameraParameters* pCameraParam);
/**
* @brief 		Converts the input points from depth coordinate space to world coordinate space.
* @param[in] 	device			The handle of the device on which to perform the operation.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	pDepthVector 	Pointer to a buffer containing the x, y, and z values of the depth coordinates to be converted. \n
*      							 x and y are measured in pixels, where 0, 0 is located at the top left corner of the image. \n
*	                            z is measured in millimeters, based on the ::PsPixelFormat depth frame.
* @param[out] 	pWorldVector 	Pointer to a buffer in which to output the converted x, y, and z values of the world coordinates, measured in millimeters.
* @param[in] 	pointCount 		The number of points to convert.
* @param[in]	pCameraParam	The intrinsic camera parameters for the depth camera. See ::PsGetCameraParameters.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_ConvertDepthToWorld(PsDeviceHandle device, uint32_t sessionIndex, PsDepthVector3* pDepthVector, PsVector3f* pWorldVector, int32_t pointCount, PsCameraParameters* pCameraParam);
/**
* @brief 		Converts the input Depth frame from depth coordinate space to world coordinate space on the device.
* @param[in] 	device			The handle of the device on which to perform the operation.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	depthFrame		The depth frame.
* @param[out] 	pWorldVector 	Pointer to a buffer in which to output the converted x, y, and z values of the world coordinates, measured in millimeters.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_ConvertDepthFrameToWorldVector(PsDeviceHandle device, uint32_t sessionIndex, const PsFrame depthFrame, PsVector3f* pWorldVector);